@@ -7,9 +7,15 @@ Changelog for CinemaVision
 - change: Add settings category 'Playback'
 - change: Move setting 'Allow video skipping' to 'Playback' category
 - add:    Settings option 'Hide queue dialog' and subsetting 'If only one item queued'
-- add:    Initial support for ratings 'style' sub-folders (reads them into the database)
+- add:    Support ratings 'style' sub-folders
+- add:    Feature setting 'Rating style selection' for selecting between 'random' and 'style'
+- add:    Feature subsetting 'Rating style'
+- fix:    Bug where bad iTunes trailer prevents any trailers from playing
+- add:    Now cleans content database when updating
+
 
 [- 0.0.30 -]
+
 - add:    When the experience is run with no queue, it uses the selected item
 - add:    When the user tries to update content with no content directory set, it shows a dialog saying it is not set or applied
 - change: Moved the 'Update content' and 'Auto update when editor starts' settings to under 'Content path' setting
